--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -15,6 +15,10 @@
   class="body-container body-container--home"
 %}
 
+  {# Video banner #}
+
+  {% include_dnd_partial path="../sections/hero-video-wrapper.html" %}
+
   {# Hero banner #}
 
   {% include_dnd_partial path="../sections/hero-banner.html" %}
