--- a/theme/css/tailwind.css
+++ b/theme/css/tailwind.css
@@ -1,10 +1,10 @@
 /*! tailwindcss v4.1.11 | MIT License | https://tailwindcss.com */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap');
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
   :root, :host {
-    --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
-      "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-sans: "Roboto", sans-serif;
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-100: oklch(93.6% 0.032 17.717);
@@ -29,6 +29,7 @@
     --color-stone-500: oklch(55.3% 0.013 58.071);
     --color-stone-600: oklch(44.4% 0.011 73.639);
     --color-stone-900: oklch(21.6% 0.006 56.043);
+    --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-xs: 20rem;
@@ -55,10 +56,14 @@
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
+    --text-7xl: 4.5rem;
+    --text-7xl--line-height: 1;
     --font-weight-thin: 100;
+    --font-weight-light: 300;
     --font-weight-normal: 400;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --font-weight-black: 900;
     --tracking-tight: -0.025em;
     --tracking-wider: 0.05em;
     --leading-tight: 1.25;
@@ -77,8 +82,14 @@
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
-    --color-cursor: #FFFFFF;
+    --color-cursor: #ffffff;
     --color-terminal: #000000;
+    --color-text-color: #b1b6c0;
+    --color-off-white: #fcfcfc;
+    --color-body-bg-color: #031d3c;
+    --color-dark-blue: #031d3c;
+    --color-turquoise: #43e3c2;
+    --color-water: #ccfaf2;
     --font-cursive: "Caveat", cursive;
     --aspect-box: 1;
     --spacing-screenSinNav: calc(100vh - 5rem);
@@ -298,6 +309,12 @@
   .-left-8 {
     left: calc(var(--spacing) * -8);
   }
+  .-z-1 {
+    z-index: calc(1 * -1);
+  }
+  .-z-2 {
+    z-index: calc(2 * -1);
+  }
   .z-10 {
     z-index: 10;
   }
@@ -336,9 +353,6 @@
   }
   .-m-1\.5 {
     margin: calc(var(--spacing) * -1.5);
-  }
-  .-m-2\.5 {
-    margin: calc(var(--spacing) * -2.5);
   }
   .m-0 {
     margin: calc(var(--spacing) * 0);
@@ -501,11 +515,23 @@
     width: calc(var(--spacing) * 40);
     height: calc(var(--spacing) * 40);
   }
-  .h-6 {
-    height: calc(var(--spacing) * 6);
+  .h-5 {
+    height: calc(var(--spacing) * 5);
+  }
+  .h-7 {
+    height: calc(var(--spacing) * 7);
+  }
+  .h-10 {
+    height: calc(var(--spacing) * 10);
+  }
+  .h-12 {
+    height: calc(var(--spacing) * 12);
   }
   .h-14 {
     height: calc(var(--spacing) * 14);
+  }
+  .h-\[75vh\] {
+    height: 75vh;
   }
   .h-auto {
     height: auto;
@@ -518,6 +544,9 @@
   }
   .max-h-0 {
     max-height: calc(var(--spacing) * 0);
+  }
+  .max-h-\[800px\] {
+    max-height: 800px;
   }
   .min-h-9 {
     min-height: calc(var(--spacing) * 9);
@@ -537,8 +566,8 @@
   .min-h-screenSinNav {
     min-height: var(--spacing-screenSinNav);
   }
-  .w-6 {
-    width: calc(var(--spacing) * 6);
+  .w-8 {
+    width: calc(var(--spacing) * 8);
   }
   .w-auto {
     width: auto;
@@ -560,6 +589,9 @@
   }
   .max-w-96 {
     max-width: calc(var(--spacing) * 96);
+  }
+  .max-w-\[630px\] {
+    max-width: 630px;
   }
   .max-w-full {
     max-width: 100%;
@@ -678,6 +710,9 @@
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
+  .gap-1\.5 {
+    gap: calc(var(--spacing) * 1.5);
+  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -701,13 +736,6 @@
       --tw-space-y-reverse: 0;
       margin-block-start: calc(calc(var(--spacing) * 2) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
-  .space-y-2\.5 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 2.5) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 2.5) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
   .space-y-4 {
@@ -766,20 +794,6 @@
       border-inline-end-width: calc(1px * calc(1 - var(--tw-divide-x-reverse)));
     }
   }
-  .divide-y {
-    :where(& > :not(:last-child)) {
-      --tw-divide-y-reverse: 0;
-      border-bottom-style: var(--tw-border-style);
-      border-top-style: var(--tw-border-style);
-      border-top-width: calc(1px * var(--tw-divide-y-reverse));
-      border-bottom-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
-    }
-  }
-  .divide-gray-100 {
-    :where(& > :not(:last-child)) {
-      border-color: var(--color-gray-100);
-    }
-  }
   .divide-gray-900\/5 {
     :where(& > :not(:last-child)) {
       border-color: color-mix(in srgb, oklch(21% 0.034 264.665) 5%, transparent);
@@ -796,6 +810,9 @@
   }
   .overflow-y-auto {
     overflow-y: auto;
+  }
+  .rounded {
+    border-radius: 0.25rem;
   }
   .rounded-2xl {
     border-radius: var(--radius-2xl);
@@ -845,6 +862,10 @@
     border-right-style: var(--tw-border-style);
     border-right-width: 1px;
   }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
   .border-l {
     border-left-style: var(--tw-border-style);
     border-left-width: 1px;
@@ -852,9 +873,6 @@
   .border-l-4 {
     border-left-style: var(--tw-border-style);
     border-left-width: 4px;
-  }
-  .border-gray-100 {
-    border-color: var(--color-gray-100);
   }
   .border-gray-200 {
     border-color: var(--color-gray-200);
@@ -874,20 +892,44 @@
   .border-transparent {
     border-color: transparent;
   }
+  .border-white\/20 {
+    border-color: color-mix(in srgb, #fff 20%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      border-color: color-mix(in oklab, var(--color-white) 20%, transparent);
+    }
+  }
+  .border-b-white\/20 {
+    border-bottom-color: color-mix(in srgb, #fff 20%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      border-bottom-color: color-mix(in oklab, var(--color-white) 20%, transparent);
+    }
+  }
+  .bg-\[\#3466B8\] {
+    background-color: #3466B8;
+  }
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
   .bg-amber-100 {
     background-color: var(--color-amber-100);
   }
+  .bg-black\/40 {
+    background-color: color-mix(in srgb, #000 40%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-black) 40%, transparent);
+    }
+  }
   .bg-cursor {
     background-color: var(--color-cursor);
   }
   .bg-cursor\/75 {
-    background-color: color-mix(in srgb, #FFFFFF 75%, transparent);
+    background-color: color-mix(in srgb, #ffffff 75%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-cursor) 75%, transparent);
     }
+  }
+  .bg-dark-blue {
+    background-color: var(--color-dark-blue);
   }
   .bg-gray-50 {
     background-color: var(--color-gray-50);
@@ -907,13 +949,16 @@
   .bg-transparent {
     background-color: transparent;
   }
+  .bg-turquoise {
+    background-color: var(--color-turquoise);
+  }
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-white\/40 {
-    background-color: color-mix(in srgb, #fff 40%, transparent);
+  .bg-white\/10 {
+    background-color: color-mix(in srgb, #fff 10%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-white) 40%, transparent);
+      background-color: color-mix(in oklab, var(--color-white) 10%, transparent);
     }
   }
   .bg-gradient-to-r {
@@ -980,17 +1025,20 @@
   .p-2 {
     padding: calc(var(--spacing) * 2);
   }
-  .p-2\.5 {
-    padding: calc(var(--spacing) * 2.5);
-  }
   .p-4 {
     padding: calc(var(--spacing) * 4);
   }
   .p-8 {
     padding: calc(var(--spacing) * 8);
   }
+  .p-10 {
+    padding: calc(var(--spacing) * 10);
+  }
   .p-12 {
     padding: calc(var(--spacing) * 12);
+  }
+  .p-px {
+    padding: 1px;
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -1022,6 +1070,9 @@
   .py-1\.5 {
     padding-block: calc(var(--spacing) * 1.5);
   }
+  .py-2 {
+    padding-block: calc(var(--spacing) * 2);
+  }
   .py-2\.5 {
     padding-block: calc(var(--spacing) * 2.5);
   }
@@ -1036,9 +1087,6 @@
   }
   .\!pt-0 {
     padding-top: calc(var(--spacing) * 0) !important;
-  }
-  .pt-2\.5 {
-    padding-top: calc(var(--spacing) * 2.5);
   }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
@@ -1067,6 +1115,9 @@
   .pl-2\.5 {
     padding-left: calc(var(--spacing) * 2.5);
   }
+  .pl-8 {
+    padding-left: calc(var(--spacing) * 8);
+  }
   .text-center {
     text-align: center;
   }
@@ -1078,6 +1129,10 @@
   }
   .font-cursive {
     font-family: var(--font-cursive);
+  }
+  .\!text-7xl {
+    font-size: var(--text-7xl) !important;
+    line-height: var(--tw-leading, var(--text-7xl--line-height)) !important;
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -1139,6 +1194,10 @@
     --tw-leading: var(--leading-tight);
     line-height: var(--leading-tight);
   }
+  .\!font-black {
+    --tw-font-weight: var(--font-weight-black) !important;
+    font-weight: var(--font-weight-black) !important;
+  }
   .\!font-bold {
     --tw-font-weight: var(--font-weight-bold) !important;
     font-weight: var(--font-weight-bold) !important;
@@ -1146,6 +1205,10 @@
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
+  }
+  .font-light {
+    --tw-font-weight: var(--font-weight-light);
+    font-weight: var(--font-weight-light);
   }
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
@@ -1175,14 +1238,29 @@
   .\!text-current {
     color: currentcolor !important;
   }
+  .\!text-dark-blue {
+    color: var(--color-dark-blue) !important;
+  }
+  .\!text-off-white {
+    color: var(--color-off-white) !important;
+  }
+  .\!text-white {
+    color: var(--color-white) !important;
+  }
   .text-blue-600 {
     color: var(--color-blue-600);
   }
   .text-current {
     color: currentcolor;
   }
+  .text-dark-blue {
+    color: var(--color-dark-blue);
+  }
   .text-gray-600 {
     color: var(--color-gray-600);
+  }
+  .text-off-white {
+    color: var(--color-off-white);
   }
   .text-rose-500 {
     color: var(--color-rose-500);
@@ -1208,6 +1286,12 @@
   .text-terminal\! {
     color: var(--color-terminal) !important;
   }
+  .text-turquoise {
+    color: var(--color-turquoise);
+  }
+  .text-water {
+    color: var(--color-water);
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -1232,8 +1316,17 @@
   .opacity-0 {
     opacity: 0%;
   }
+  .opacity-45 {
+    opacity: 45%;
+  }
   .opacity-100 {
     opacity: 100%;
+  }
+  .mix-blend-exclusion {
+    mix-blend-mode: exclusion;
+  }
+  .mix-blend-multiply {
+    mix-blend-mode: multiply;
   }
   .shadow {
     --tw-shadow: 0 1px 3px 0 var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 1px 2px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
@@ -1379,10 +1472,10 @@
       }
     }
   }
-  .group-hover\:text-current {
+  .group-hover\:text-turquoise {
     &:is(:where(.group):hover *) {
       @media (hover: hover) {
-        color: currentcolor;
+        color: var(--color-turquoise);
       }
     }
   }
@@ -1407,6 +1500,16 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-gray-50);
+      }
+    }
+  }
+  .hover\:bg-white\/20 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in srgb, #fff 20%, transparent);
+        @supports (color: color-mix(in lab, red, red)) {
+          background-color: color-mix(in oklab, var(--color-white) 20%, transparent);
+        }
       }
     }
   }
@@ -1451,9 +1554,19 @@
       margin-bottom: calc(var(--spacing) * 4);
     }
   }
+  .sm\:h-\[30px\] {
+    @media (width >= 40rem) {
+      height: 30px;
+    }
+  }
   .sm\:max-w-sm {
     @media (width >= 40rem) {
       max-width: var(--container-sm);
+    }
+  }
+  .sm\:flex-1 {
+    @media (width >= 40rem) {
+      flex: 1;
     }
   }
   .sm\:grid-cols-2 {
@@ -1567,6 +1680,11 @@
       height: calc(var(--spacing) * 24);
     }
   }
+  .md\:h-5 {
+    @media (width >= 48rem) {
+      height: calc(var(--spacing) * 5);
+    }
+  }
   .md\:h-full {
     @media (width >= 48rem) {
       height: 100%;
@@ -1575,6 +1693,11 @@
   .md\:min-h-96 {
     @media (width >= 48rem) {
       min-height: calc(var(--spacing) * 96);
+    }
+  }
+  .md\:flex-auto {
+    @media (width >= 48rem) {
+      flex: auto;
     }
   }
   .md\:grid-cols-2 {
@@ -1762,6 +1885,11 @@
       height: calc(var(--spacing) * 72);
     }
   }
+  .lg\:h-\[30px\] {
+    @media (width >= 64rem) {
+      height: 30px;
+    }
+  }
   .lg\:w-full {
     @media (width >= 64rem) {
       width: 100%;
@@ -1843,6 +1971,11 @@
       justify-content: center;
     }
   }
+  .lg\:gap-4 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 4);
+    }
+  }
   .lg\:gap-8 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 8);
@@ -1892,6 +2025,11 @@
       padding-inline: calc(var(--spacing) * 8);
     }
   }
+  .lg\:py-4 {
+    @media (width >= 64rem) {
+      padding-block: calc(var(--spacing) * 4);
+    }
+  }
   .lg\:py-16 {
     @media (width >= 64rem) {
       padding-block: calc(var(--spacing) * 16);
@@ -1900,6 +2038,11 @@
   .lg\:pt-32 {
     @media (width >= 64rem) {
       padding-top: calc(var(--spacing) * 32);
+    }
+  }
+  .lg\:pl-4 {
+    @media (width >= 64rem) {
+      padding-left: calc(var(--spacing) * 4);
     }
   }
   .lg\:text-4xl {
@@ -1943,6 +2086,16 @@
   .xl\:gap-8 {
     @media (width >= 80rem) {
       gap: calc(var(--spacing) * 8);
+    }
+  }
+  .xl\:px-10 {
+    @media (width >= 80rem) {
+      padding-inline: calc(var(--spacing) * 10);
+    }
+  }
+  .xl\:pl-0 {
+    @media (width >= 80rem) {
+      padding-left: calc(var(--spacing) * 0);
     }
   }
   .\[\&_\.dnd-section\]\:py-4 {
@@ -2010,6 +2163,88 @@
     &>svg {
       width: calc(var(--spacing) * 6);
     }
+  }
+}
+@layer base {
+  body {
+    font-family: var(--font-sans);
+    background-color: var(--color-body-bg-color);
+    color: var(--color-text-color);
+    margin: 0;
+    padding: 0;
+  }
+  .gradient-border {
+    background: linear-gradient( 90deg, #43e3c2 0%, #30abff 50%, #43e3c2 100% );
+    padding: 1px;
+  }
+  .v-gradient-border {
+    background: linear-gradient(180deg, #43e3c2 0%, #30abff 100%);
+  }
+  .home-hero {
+    background: linear-gradient( 135deg, #031d3c 40.92%, rgba(32, 66, 106, 0) 78.61% );
+  }
+  .hero {
+    position: relative;
+    background-color: #031535;
+    background-image: linear-gradient( 90deg, #041431 19.72%, rgba(0, 0, 0, 0) 74.68% );
+    background-size: auto;
+    background-position: 0 0;
+    background-repeat: no-repeat;
+  }
+  .hero::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-image: url('/hero-bg.png');
+    background-size: 102.909% 177.957%;
+    background-position: 0 -80.824px;
+    background-repeat: no-repeat;
+    opacity: 0.25;
+    mix-blend-mode: lighten;
+    z-index: 0;
+  }
+  .hero > * {
+    position: relative;
+    z-index: 1;
+  }
+  .gradient-border-right, .gradient-border-left, .gradient-border-top, .gradient-border-bottom {
+    position: relative;
+  }
+  .gradient-border-right::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 1px;
+    background: linear-gradient(180deg, #43e3c2 0%, #30abff 100%);
+  }
+  .gradient-border-left::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 1px;
+    background: linear-gradient(180deg, #43e3c2 0%, #30abff 100%);
+  }
+  .gradient-border-top::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    height: 1px;
+    background: linear-gradient(90deg, #43e3c2 0%, #30abff 100%);
+  }
+  .gradient-border-bottom::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 1px;
+    background: linear-gradient(90deg, #43e3c2 0%, #30abff 100%);
   }
 }
 @layer base {
@@ -2562,11 +2797,6 @@ lite-youtube.lyt-activated::before, lite-youtube.lyt-activated > .lty-playbtn {
   inherits: false;
   initial-value: solid;
 }
-@property --tw-divide-y-reverse {
-  syntax: "*";
-  inherits: false;
-  initial-value: 0;
-}
 @property --tw-gradient-position {
   syntax: "*";
   inherits: false;
@@ -2806,7 +3036,6 @@ lite-youtube.lyt-activated::before, lite-youtube.lyt-activated > .lty-playbtn {
       --tw-space-x-reverse: 0;
       --tw-divide-x-reverse: 0;
       --tw-border-style: solid;
-      --tw-divide-y-reverse: 0;
       --tw-gradient-position: initial;
       --tw-gradient-from: #0000;
       --tw-gradient-via: #0000;
