--- a/theme/templates/layouts/base.html
+++ b/theme/templates/layouts/base.html
@@ -21,9 +21,12 @@
     <a href="#main-content" class="sr-only header__skip">Skip to content</a>
 
     <div class="body-wrapper {{ builtin_body_classes }}">
-      {% block header %}
-        {% global_partial path="../partials/header.html" %}
-      {% endblock header %}
+        <div class="sticky top-0 z-50">
+
+            {% block header %}
+              {% global_partial path="../partials/header.html" no_wrapper=True %}
+            {% endblock header %}
+        </div>
 
       {# The main-content ID is used for the navigation skipper in the header.html file. More information on the navigation skipper can be found here: https://github.com/HubSpot/cms-theme-boilerplate/wiki/Accessibility #}
 
